# dashboard-builder

./: .gitignore  DEPLOY.md  LICENSE  README.md  modal_app.py  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
apps/builder/: index.html  package.json
apps/builder/public/: analytics.js
apps/builder/src/: App.tsx  Wizard.tsx  api.ts  citations.ts  draft.ts  main.tsx  styles.css  validators.ts
apps/builder/src/steps/: GraphStep.tsx  GuidedQA.tsx  InputStep.tsx  OutputStep.tsx  ProgramStep.tsx  PublishStep.tsx
apps/renderer/: index.html  package.json  vite.config.ts
apps/renderer/src/: App.tsx  spec-source.ts  styles.css
compute/: README.md  dashboards.py  engine.py  graph.py  main.py  pyproject.toml  registry.py  spec_loader.py
compute/tests/: test_real_engine_snap.py  test_sensitivity_scenarios.py  test_trace_kind.py
examples/: co-snap.dashboard.yaml
scripts/: setup-engine.sh
