[project]
name = "dashboard-builder-compute"
version = "0.0.1"
description = "FastAPI compute service for dashboard-builder, wrapping axiom-rules"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
engine = [
  # axiom-rules Python wrapper. Install in editable mode from a local clone:
  #   uv pip install -e ../../axiom-rules
  # Set AXIOM_RULES_BIN to the compiled binary path before running uvicorn.
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "engine", "graph", "registry", "spec_loader", "dashboards"]
